# epirust

./: .coveralls.yml  .dockerignore  .gitignore  .rustfmt.toml  .travis.yml  CLOUD_SETUP_WITH_MPI.md  CONTRIBUTING.md  Cargo.toml  LOCAL_SETUP_KAFKA.md  LOCAL_SETUP_WITH_MPI.md  README.md  app.js  ci.gocd.yaml  draw.gnuplot  io.js  package-lock.json  package.json  webpack.config.js
common/: Cargo.toml
common/config/test/: auto_pop.json  travel_plan.json
common/src/: lib.rs
common/src/config/: configuration.rs  geography_parameters.rs  intervention_config.rs  mod.rs  population.rs  request.rs  starting_infections.rs  travel_plan_config.rs
common/src/disease/: disease_interface.rs  mod.rs
common/src/models/: commute_plan.rs  custom_types.rs  migration_plan.rs  mod.rs  travel_plan.rs
common/src/utils/: mod.rs  random_wrapper.rs  test_utils.rs
engine/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  logs.patch  results.csv
engine-app/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
engine-app/config/: log4rs.yaml  mumbai.json
engine-app/src/: file_logger.rs  log_file.rs  main.rs
engine/config/: 100k_100.json  10K_standalone.json  1m_100.json  1m_100_latest.json  1m_300.json  20K_standalone.json  2m_100.json  2m_250.json  2m_500.json  3m_100.json  5m_100.json  default.json  diseases.yaml  fifty_thousand_no_lockdown.json  generate.py  generate_matrix.js  pune.json  pune_baseline.json  pune_lockdown.json  simulation.json
engine/config/test/: auto_pop.json  csv_pop.json
engine/docs/: README.md
engine/experiments/: 01.sh  02.sh  03.sh
engine/experiments/sims2020/high_baseline/: high_baseline.json
engine/experiments/sims2020/high_baseline/run_1/: high_baseline_2020-07-07T10:16:16.csv  high_baseline_2020-07-07T10:16:16_updated.csv
engine/experiments/sims2020/high_baseline/run_3/: high_baseline_2020-07-07T10:16:13.csv  high_baseline_2020-07-07T10:16:13_updated.csv
engine/experiments/sims2020/high_baseline/run_4/: high_baseline_2020-07-07T10:16:13.csv  high_baseline_2020-07-07T10:16:13_updated.csv
engine/experiments/sims2020/high_baseline/run_5/: high_baseline_2020-07-07T10:16:13.csv  high_baseline_2020-07-07T10:16:13_updated.csv
engine/experiments/sims2020/high_lockdown/: high_lockdown.json
engine/experiments/sims2020/high_lockdown/run_2/: high_lockdown_2020-07-07T10:16:17.csv  high_lockdown_2020-07-07T10:16:17_updated.csv
engine/experiments/sims2020/high_lockdown/run_3/: high_lockdown_2020-07-07T10:16:13.csv  high_lockdown_2020-07-07T10:16:13_interventions.json  high_lockdown_2020-07-07T10:16:13_updated.csv
engine/experiments/sims2020/high_lockdown/run_4/: high_lockdown_2020-07-07T10:16:13.csv  high_lockdown_2020-07-07T10:16:13_updated.csv
engine/experiments/sims2020/high_lockdown/run_5/: high_lockdown_2020-07-07T10:16:14.csv  (+1 more)
engine/experiments/sims2020/low_baseline/: low_baseline.json  move.sh
engine/experiments/sims2020/low_lockdown/: low_lockdown.json
engine/infra/: README.md
engine/plot/: .gitignore  README.md  collate_all_simulations.py  color_mapping.json  draw.gnuplot  merge_regions_data.py  plot.py  requirements.txt  update_total_infections.py
engine/plot/models/: Curve.py  Curves.py  EpiCurves.py  __init__.py
engine/scripts/: epirust  time_division.sh
engine/src/: agent.rs  allocation_map.rs  citizen.rs  commute.rs  commute_consumer.rs  config.rs  constants.rs  csv_service.rs  custom_types.rs  disease.rs  disease_state_machine.rs  engine_app.rs  environment.rs  epidemiology_simulation.rs  events.rs  geojson_service.rs  helpers.rs  interventions.rs  kafka_consumer.rs  kafka_producer.rs  lib.rs  main.rs  masking.rs  migrators_consumer.rs  run_mode.rs  ticks_consumer.rs  travel_consumer.rs  travel_plan.rs  travellers_consumer.rs
engine/src/citizen/: citizen_data.rs  citizen_factory.rs  mod.rs  population_record.rs  work_status.rs
engine/src/config/: config.rs  configuration.rs  geography_parameters.rs  mod.rs  population.rs  request.rs  starting_infections.rs  travel_plan_config.rs
engine/src/disease/: disease.rs  mod.rs
engine/src/geography/: area.rs  areacode.rs  grid.rs  mod.rs  point.rs
engine/src/interventions/: hospital.rs  intervention_type.rs  lockdown.rs  mod.rs  vaccination.rs
engine/src/kafka/: kafka_consumer.rs  kafka_producer.rs  mod.rs  ticks_consumer.rs  travel_consumer.rs
engine/src/listeners/: Listener.rs  csv_service.rs  disease_tracker.rs  events_kafka_producer.rs  intervention_reporter.rs  kafka_producer.rs  kafka_service.rs  listener.rs  mod.rs  travel_counter.rs
engine/src/listeners/events/: citizen_state.rs  counts.rs  mod.rs
engine/src/models/: buildings.rs  commute_plan.rs  constants.rs  custom_types.rs  migration_plan.rs  mod.rs
engine/src/models/events/: citizen_state.rs  counts.rs  mod.rs  tick.rs  tick_ack.rs
engine/src/orchestration/: environment.rs  ticks.rs
engine/src/population/: mod.rs  synthetic_population.rs
engine/src/state_machine/: default_disease_handler.rs  default_state_handler.rs  disease_handler.rs  dsm.rs  mod.rs  state.rs
engine/src/tick/: mod.rs  tick_util.rs
engine/src/transport/: engine_handlers.rs  kafka_transport.rs  mod.rs  mpi_tag.rs  mpi_transport.rs
engine/src/travel/: mod.rs  travel_plan.rs
engine/src/travel/commute/: commute_plan.rs  commuter.rs  commuters_by_region.rs  mod.rs
engine/src/travel/migration/: engine_migration_plan.rs  migration_plan.rs  migrator.rs  migrators_by_engine.rs  mod.rs
engine/src/utils/: environment.rs  lib.rs  mod.rs  random_wrapper.rs  send_record.rs  util.rs
engine/test_folder/: 0_logs.txt  1_logs.txt
orchestrator/: .dockerignore  .gitignore  100k_100_latest.json  1m_100_latest.json  Cargo.toml  Dockerfile
orchestrator/config/: generate.py  mumbai.json  mumbai_with_commute.json  pune_ward_wise.json  pune_ward_wise_commute.json  simulation.json  travel_plan.json
orchestrator/config/test/: travel_plan.json
orchestrator/src/: config.rs  custom_types.rs  kafka_consumer.rs  kafka_producer.rs  main.rs  ticks.rs  travel_plan.rs
orchestrator/src/utils/: mod.rs
plot/: plot.py
(+424 files in other folders)
