[package]
name = "predator_pray"
version = "0.1.0"
authors = ["KJAYANTA <jayantak@thoughtworks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
hashbrown = "0.6.3"
csv = "1.1.1"
serde = "1.0.103"
serde_derive = "1.0.103"

[profile.release]
opt-level = 3