[package]
name = "epirust"
version = "0.1.0"
authors = ["KJAYANTA <jayantak@thoughtworks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
fxhash = "0.2.1"
csv = "1.1.1"
serde = "1.0.103"
serde_derive = "1.0.103"
serde_json = "1.0.48"
serde_yaml = "0.8.11"
rdkafka = { version = "0.23", features = ["cmake-build"] }
clap = "2.33.0"
ndarray = "0.13.0"
futures = "0.3.4"
tokio = { version = "0.2.11", features = ["full"] }
chrono = "0.4.10"
geo-types = "0.4.3"
geo = "0.12.2"
geojson = "0.17.0"

[profile.release]
opt-level = 3
