[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde = "1.0.103"
serde_derive = "1.0.103"
serde_json = "1.0.85"
serde_yaml = "0.9.13"
validator = { version = "0.16.0", features = ["derive"] }
