[package]
name = "engine-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
engine = { path = "../engine" }
tokio = { version = "1.20.1", features = ["full"] }
clap = "3.2.19"
env_logger = "0.10.0"
