[package]
name = "engine-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine = { path = "../engine" }
tokio = { version = "1.20.1", features = ["full"] }
clap = { version = "4.0.32", features = ["derive"] }
env_logger = "0.10.0"
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.17.0", features = ["rt-tokio"] }
mpi = "0.6.0"
log4rs = "1.2.0"
log = "0.4.19"
