[package]
name = "epirust-engine"
version = "0.1.0"
authors = ["KJAYANTA <jayantak@thoughtworks.com>"]
edition = "2018"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
fnv = "1.0.6"
csv = "1.1.1"
serde = "1.0.103"
serde_derive = "1.0.103"
serde_json = "1.0.48"
serde_yaml = "0.9.10"
rdkafka = { version = "0.23", features = ["cmake-build"] }
clap = "3.2.19"
ndarray = "0.15.6"
futures = "0.3.4"
tokio = { version = ">=1.8.4, <1.9.0", features = ["full"] }
chrono = ">=0.4.20"
geo-types = "0.7.7"
geo = "0.23.0"
geojson = "0.23.0"
plotters = "0.3.3"
log = "0.4"
env_logger = "0.9.0"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
validator = { version = "0.16.0", features = ["derive"] }

[profile.release]
opt-level = 3
