[package]
name = "engine"
version = "0.1.0"
authors = ["KJAYANTA <jayantak@thoughtworks.com>"]
edition = "2018"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
rand = "0.8.5"
fnv = "1.0.6"
csv = "1.1.6"
serde = "1.0.103"
serde_derive = "1.0.103"
serde_json = "1.0.48"
serde_yaml = "0.9.10"
rdkafka = { version = "0.29.0", features = ["cmake-build"] }
ndarray = "0.15.6"
futures = "0.3.4"
tokio = { version = "1.20.1", features = ["full"] }
time = { version = "0.3.14", features = ["formatting"] }
geo-types = "0.7.7"
geo = "0.23.0"
geojson = "0.24.0"
plotters = { version = "0.3.3", default-features = false, features = ["bitmap_backend", "bitmap_encoder"] }
log = "0.4"
env_logger = "0.10.0"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
validator = { version = "0.16.0", features = ["derive"] }
rayon = "1.5"
copystr = { version = "0.0.5", features = [ "serde" ] }
fxhash = "0.2.1"
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.17.0", features = ["rt-tokio"] }

[profile.release]
opt-level = 3
