[package]
name = "orchestrator"
version = "0.1.0"
authors = ["Akshay Dewan <akshayde@thoughtworks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.23", features = ["cmake-build"] }
tokio = { version = "0.2.11", features = ["full"] }
