[package]
name = "epirust-orchestrator"
version = "0.1.0"
authors = ["Akshay Dewan <akshayde@thoughtworks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.23", features = ["cmake-build"] }
tokio = { version = "0.2.11", features = ["full"] }
futures = "0.3.4"
serde = "1.0.103"
serde_derive = "1.0.103"
serde_json = "1.0.48"
log = "0.4"
env_logger = "0.7"
clap = "2.33.0"
validator = { version = "0.12", features = ["derive"] }
