[package]
name = "epirust-orchestrator"
version = "0.1.0"
authors = ["Akshay Dewan <akshayde@thoughtworks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
rdkafka = { version = "0.29.0", features = ["cmake-build"] }
tokio = { version = "1.20.1", features = ["full"] }
futures = "0.3.4"
serde = "1.0.103"
serde_derive = "1.0.103"
serde_json = "1.0.48"
log = "0.4"
env_logger = "0.10.0"
clap = { version = "4.0.32", features = ["derive"] }
validator = { version = "0.16.0", features = ["derive"] }
